Divide require and skip predicates